--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-mqtt": "0.1.0-beta4",
+    "react-native-paho-mqtt": "^0.1.1",
     "react-native-paper": "2.2.8",
-    "react-navigation": "^2.9.3"
+    "react-navigation": "^2.9.3",
+    "react_native_mqtt": "^1.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
