--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-mqtt": "0.1.0-beta4",
     "react-native-paho-mqtt": "^0.1.1",
     "react-native-paper": "2.2.8",
